@@ -1,3 +1,10 @@
+TAG: qcreports_db-4-3-4-12
+DATE: 07/29/2010
+STAFF: lec
+CHANGES: TR10158
+1) item 5: ALL_NoMCL.sql
+2) item 7: ALL_MCLAllele.sql
+
 TAG: qcreports_db-4-3-4-11
 DATE: 07/28/2010
 STAFF: lec
